| Bug #59723 | NdbEventOperation->execute() error 711 during node restart; schema operations | ||
|---|---|---|---|
| Submitted: | 25 Jan 2011 20:22 | Modified: | 1 Feb 2011 16:54 |
| Reporter: | Daniel Smythe | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: NDB API | Severity: | S3 (Non-critical) |
| Version: | 7.1.9 | OS: | Any |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
| Tags: | cluser, error, ndbapi, ndbeventoperation, restart | ||
[25 Jan 2011 20:22]
Daniel Smythe
[28 Jan 2011 11:32]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/129848 4153 Jonas Oreland 2011-01-28 ndb - bug#59723 - ignore 711 in ndbEventOperation->execute()
[28 Jan 2011 12:16]
Bugs System
Pushed into mysql-5.1-telco-7.0 5.1.51-ndb-7.0.22 (revid:jonas@mysql.com-20110128112755-8iiuck6ewd3krtgo) (version source revid:jonas@mysql.com-20110128112755-8iiuck6ewd3krtgo) (merge vers: 5.1.51-ndb-7.0.22) (pib:24)
[1 Feb 2011 9:12]
Jonas Oreland
pushed into 7.0.22 and 7.1.11
[1 Feb 2011 16:54]
Jon Stephens
Documented bugfix in the NDB-7.0.22 and 7.1.11 changelogs as follows:
When calling NdbEventOperation::execute() during a node restart,
it was possible to get a spurious error 711 (System busy with
node restart, schema operations not allowed when a node is
starting).
Updated category.
Closed.
