ndb - bug#59723 - ignore 711 in ndbEventOperation->execute()